--- a/src/main/resources/orders.jrxml
+++ b/src/main/resources/orders.jrxml
@@ -32,7 +32,10 @@
                     </textElement>
                     <text><![CDATA[Orders Reports]]></text>
                 </staticText>
-                
+                <image>
+					<reportElement x="300" y="16" width="50" height="50" uuid="977bac49-afdc-45de-a5b3-76683516bd5c"/>
+					<imageExpression><![CDATA["images/fis.png"]]></imageExpression>
+				</image>
             </frame>
         </band>
     </title>
