--- a/src/main/resources/templates/assets.html
+++ b/src/main/resources/templates/assets.html
@@ -41,6 +41,7 @@
                 <button type="submit" class="btn btn-primary">Filter</button>
                 <a th:href="@{/assets}" class="btn btn-secondary">Reset</a>
 				<a th:href="@{/jasperpdf/asset/export}" class="btn btn-danger btn-sm">PDF</a>
+				<a th:href="@{/assetexcel}" class="btn btn-primary">EXCEL</a>
               </div>
             </form>
 
