--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -36,6 +36,7 @@
                 <button type="submit" class="btn btn-primary">Filter</button>
                 <a th:href="@{/customers}" class="btn btn-secondary">Reset</a>
 				<a th:href="@{/jasperpdf/export}" class="btn btn-danger btn-sm">PDF</a>
+				<a th:href="@{/customerexcel}" class="btn btn-primary">EXCEL</a>
               </div>
             </form>
             <table class="table table-bordered" id="datatablesSimple">
