--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -34,6 +34,7 @@
                 <button type="submit" class="btn btn-primary">Filter</button>
                 <a th:href="@{/orders}" class="btn btn-secondary">Reset</a>
 				<a th:href="@{/jasperpdf/order/export}" class="btn btn-danger btn-sm">PDF</a>
+				<a th:href="@{/excel}" class="btn btn-primary">Excel</a>
               </div>
             </form>
 			
